# CoreFlow-Studio

./: .gitignore  AGENTS.md  environment.yml  pyproject.toml
.githooks/: post-commit  pre-commit
docs/: ARCHITECTURE.md  DATA_MODEL.md  DEVELOPER_SETUP.md  DEVELOPMENT_WORKFLOW.md  IMPLEMENTATION_PLAN.md  M0_VERIFICATION.md  M10_VERIFICATION.md  M11_VERIFICATION.md  M12_VERIFICATION.md  M15_VERIFICATION.md  M16_VERIFICATION.md  M17_REGISTER_MAP_LIBRARY.zh-CN.md  M17_VERIFICATION.md  M1_VERIFICATION.md  M2_VERIFICATION.md  M3_VERIFICATION.md  M4_VERIFICATION.md  M5_VERIFICATION.md  M6_VERIFICATION.md  M7_VERIFICATION.md  M8_VERIFICATION.md  M9_VERIFICATION.md  MODBUS_API.md  MODBUS_OPERATIONS.md  MODBUS_OPERATIONS.zh-CN.md  MODBUS_ZERO_MONITOR.zh-CN.md  PRD.md  PROTOCOLS.md  PULSE_COUNTER.md  SIMULATION.md  TEST_PLAN.md  USER_MANUAL.en.md  USER_MANUAL.zh-CN.md
scripts/: check_version_update.py  extract_krohne_register_map.py  release.ps1
tests/: modbus_fakes.py  test_analysis_error.py  test_analysis_filling.py  test_analysis_stability.py  test_asio_iis.py  test_bootstrap.py  test_calibration_manual_workflows.py  test_calibration_workflow.py  test_device_history.py  test_devices_models.py  test_experiment_workflow.py  test_factory_test_workflow.py  test_filling_service.py  test_flowmeter_device_interface.py  test_hardware_acceptance.py  test_krohne_register_map_extractor.py  test_modbus_api.py  test_modbus_device.py  test_modbus_encoding.py  test_modbus_module.py  test_modbus_register_map_library.py  test_modbus_transport.py  test_packaging.py  test_pulse_counter.py  (+21 more)
(+96 files in other folders)
